<resources>
    <string name="app_name">CavDaily</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_image">ImageActivity</string>
    <string name="action_search">Search</string>

    <string name="nav_search">Search</string>
    <string name="nav_top">Top Stories</string>
    <string name="nav_news">News</string>
    <string name="nav_sports">Sports</string>
    <string name="nav_opinion">Opinion</string>
    <string name="nav_arts_and_ent">Arts &amp; Entertainment</string>
    <string name="nav_life">Life</string>
    <string name="nav_focus">Focus</string>
    <string name="nav_health_and_sci">Health &amp; Science</string>
    <string name="nav_multimedia">Multimedia</string>
    <string name="nav_find_a_paper">Find a Paper</string>
    <string name="nav_about">About</string>

    <string name="drawer_open">Open</string>
    <string name="drawer_closed">Closed</string>
    <string name="share">Share</string>
    <string name="related_articles">Related Articles</string>

    <string name="title_activity_article_detail">ArticleDetail</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_gallery_pager">GalleryPagerActivity</string>
    <string name="title_activity_paper_location">PaperLocationActivity</string>
    <string name="title_activity_search">SearchActivity</string>
</resources>
