<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_search"
            android:title="@string/nav_search"/>
        <item
            android:id="@+id/nav_top"
            android:checked="true"
            android:title="@string/nav_top"/>
        <item
            android:id="@+id/nav_news"
            android:title="@string/nav_news"/>
        <item
            android:id="@+id/nav_sports"
            android:title="@string/nav_sports"/>
        <item
            android:id="@+id/nav_opinion"
            android:title="@string/nav_opinion"/>
        <item
            android:id="@+id/nav_arts_and_ent"
            android:title="@string/nav_arts_and_ent"/>
        <item
            android:id="@+id/nav_life"
            android:title="@string/nav_life"/>
        <item
            android:id="@+id/nav_focus"
            android:title="@string/nav_focus"/>
        <item
            android:id="@+id/nav_health_and_sci"
            android:title="@string/nav_health_and_sci"/>
        <item
            android:id="@+id/nav_multimedia"
            android:title="@string/nav_multimedia"/>
        <item
            android:id="@+id/nav_find_a_paper"
            android:title="@string/nav_find_a_paper"/>
        <item
            android:id="@+id/nav_about"
            android:title="@string/nav_about"/>
    </group>
</menu>